render html product detail

--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -9,8 +9,7 @@
                     <div class="container">
                         <div class="slide-content clearfix ">
                             <h1><span>World Medical Tourism Alliance</span></h1>
-                            <p>Best value Medical tourism packages in matching needs, all at affordable prices and that
-                                match with preference & life style across Thailand & Asia pacific.
+                            <p>Best value Medical tourism packages in matching needs, all at affordable prices and that match with preference & life style across Thailand & Asia pacific.
                             </p>
                             <a class="slider-button" href="/products">See Packages</a>
                         </div>
@@ -47,19 +46,18 @@
             <div class="clearfix">
                 <div class="appointment-form clearfix animated">
                     <form>
+
                         <div class="row mx-auto">
-                            <div class="col-sm-10 common">
-                                <input type="text" name="app-search" id="app-search" placeholder="Search"  />
+                            <div class="col-sm-11 common">
+                                <input type="text" name="app-search" id="app-search" placeholder="Search" />
                             </div>
-                            <div class="col-sm-2 common">
-                                <!-- <input type="submit" id="btnSearch" class="btn form-submit-btn" value="Search" /> -->
-                                <button class="btn btn-lg btn-success mx-2" type="submit"  id="btnSearch">
-                                    <i class="fa fa-search"></i>&nbsp;Search</button>
+                            <div class="col-sm-1 common">
+                                <button class="btn btn-lg btn-success mx-2" type="submit" id="btnSearch">
+                                    <i class="fa fa-search"></i></button>
                             </div>
                         </div>
 
-                        <img src="assets/images/white-loader.gif" class="ajax-loader" id="appointment-loader"
-                            alt="Loading...">
+                        <img src="assets/images/white-loader.gif" class="ajax-loader" id="appointment-loader" alt="Loading...">
                         <div id="response-container"></div>
 
                     </form>
@@ -196,11 +194,8 @@
                             <div class="col-md-12">
                                 <h3><a href="pages/about-us">World Medical Tourism Alliance</a></h3>
                                 <p>
-                                    We are the best “Medical Tourism Facilitator” to deliver excellent of care and
-                                    ensuring the continuity of care for patients (customers) and provide professional
-                                    consultation services and personalized assistance , best value Medical tourism
-                                    packages in matching needs, all at affordable prices and that match with preference
-                                    & life style across Thailand & Asia pacific.</p>
+                                    We are the best “Medical Tourism Facilitator” to deliver excellent of care and ensuring the continuity of care for patients (customers) and provide professional consultation services and personalized assistance , best value Medical tourism packages in
+                                    matching needs, all at affordable prices and that match with preference & life style across Thailand & Asia pacific.</p>
                             </div>
                         </div>
                     </article>
@@ -226,8 +221,7 @@
                 <article class="service type-service hentry three-col-service">
                     <figure>
                         <a href="/health-blog/{{ item.id }}" title="{{ item.id }}">
-                            <img src="{{ item.image }}" alt="{{ item.title }}"
-                                style="width: 100%; height: 250px; object-fit: cover;" />
+                            <img src="{{ item.image }}" alt="{{ item.title }}" style="width: 100%; height: 250px; object-fit: cover;" />
                         </a>
                     </figure>
                     <div class="contents clearfix">
@@ -263,14 +257,18 @@
                         <div class="clearfix" id="slider">
                             <!--slider-->
                             <ul class="slides">
-                                <li><a href="assets/images/temp-images/slide-one.jpg" title=""><img
-                                            src="assets/images/temp-images/slide-one.jpg" alt="gallery-1"></a></li>
-                                <li><a href="assets/images/temp-images/slide-two.jpg" title=""><img
-                                            src="assets/images/temp-images/slide-two.jpg" alt="gallery-3"></a></li>
-                                <li><a href="assets/images/temp-images/slide-one.jpg" title=""><img
-                                            src="assets/images/temp-images/slide-one.jpg" alt="gallery-4"></a></li>
-                                <li><a href="assets/images/temp-images/slide-two.jpg" title=""><img
-                                            src="assets/images/temp-images/slide-two.jpg" alt="gallery-5"></a></li>
+                                <li>
+                                    <a href="assets/images/temp-images/slide-one.jpg" title=""><img src="assets/images/temp-images/slide-one.jpg" alt="gallery-1"></a>
+                                </li>
+                                <li>
+                                    <a href="assets/images/temp-images/slide-two.jpg" title=""><img src="assets/images/temp-images/slide-two.jpg" alt="gallery-3"></a>
+                                </li>
+                                <li>
+                                    <a href="assets/images/temp-images/slide-one.jpg" title=""><img src="assets/images/temp-images/slide-one.jpg" alt="gallery-4"></a>
+                                </li>
+                                <li>
+                                    <a href="assets/images/temp-images/slide-two.jpg" title=""><img src="assets/images/temp-images/slide-two.jpg" alt="gallery-5"></a>
+                                </li>
                             </ul>
                         </div>
                         <div id="carousel" class="flexslider">
@@ -295,14 +293,10 @@
             <div class="slogan-section text-center clearfix">
                 <h1>Wellness Hotels & Resorts</h1>
                 <h2>Health Resorts & Medical Spas</h2>
-                <p>Choose your favorite Wellness, Health resorts and Medical Spas that match with your preference & life
-                    style
-                    Beyond this, We have more than 122 Alternative State Quarantine (ASQ) or Alternative Local
-                    Quarantine (ALQ) Hospital, Hotel ,
-                    Wellness & golf Quarantine around Thailand that have been approved by Thailand’s Ministry of Public
-                    Health and the Ministry of Defense.
-                    Also, we have service providers who achieves GHA's COVID-19 Certification of Conformance for Medical
-                    Travel Program.</p>
+                <p>Choose your favorite Wellness, Health resorts and Medical Spas that match with your preference & life style Beyond this, We have more than 122 Alternative State Quarantine (ASQ) or Alternative Local Quarantine (ALQ) Hospital, Hotel , Wellness
+                    & golf Quarantine around Thailand that have been approved by Thailand’s Ministry of Public Health and the Ministry of Defense. Also, we have service providers who achieves GHA's COVID-19 Certification of Conformance for Medical Travel
+                    Program.
+                </p>
             </div>
         </div>
     </div>
@@ -331,8 +325,7 @@
                 <article class="service type-service hentry three-col-service">
                     <figure>
                         <a href="/products/detail/{{ item.id }}" title="{{ item.id }}">
-                            <img src="{{ item.main_picture }}" alt="{{ item.title }}"
-                                style="width: 100%; height: 250px; object-fit: cover;" />
+                            <img src="{{ item.main_picture }}" alt="{{ item.title }}" style="width: 100%; height: 250px; object-fit: cover;" />
                         </a>
                     </figure>
                     <div class="contents clearfix">
@@ -348,9 +341,9 @@
         </div>
         <div class="row">
             <div class="col-12 text-center">
-              <a class="read-more" href="/products">View all Packages</a>
+                <a class="read-more" href="/products">View all Packages</a>
             </div>
-          </div>
+        </div>
     </div>
 
 </div>
