--- a/src/app/products/detail/detail.component.html
+++ b/src/app/products/detail/detail.component.html
@@ -9,22 +9,19 @@
                         <div class="clearfix" id="slider">
                             <!--slider-->
                             <ul class="slides">
-                                <li><a href="{{ productData.main_picture }}" title=""><img
-                                            src="{{ productData.main_picture }}" class="img-products"
-                                            alt="{{ productData.title }}"></a></li>
-                                <li *ngFor='let p of pathImg'><a href="{{ p.image }}" title="{{ p.title }}"><img
-                                            src="{{ p.image }}" class="img-products"
-                                            alt="{{ p.title }}"></a>
+                                <li>
+                                    <a href="{{ productData.main_picture }}" title=""><img src="{{ productData.main_picture }}" class="img-products" alt="{{ productData.title }}"></a>
+                                </li>
+                                <li *ngFor='let p of pathImg'>
+                                    <a href="{{ p.image }}" title="{{ p.title }}"><img src="{{ p.image }}" class="img-products" alt="{{ p.title }}"></a>
                             </ul>
                         </div>
                         <br />
                         <div id="carousel" class="flexslider">
                             <!--thumbnail carousel for slider-->
                             <ul class="slides">
-                                <li><img src="{{ productData.main_picture }}" class="img-slides"
-                                        alt="{{ productData.title }}"></li>
-                                <li *ngFor='let p of pathImg'><img src="{{ p.image }}" class="img-slides"
-                                        alt="{{ p.title }}"></li>
+                                <li><img src="{{ productData.main_picture }}" class="img-slides" alt="{{ productData.title }}"></li>
+                                <li *ngFor='let p of pathImg'><img src="{{ p.image }}" class="img-slides" alt="{{ p.title }}"></li>
                             </ul>
                         </div>
                     </div>
@@ -36,7 +33,7 @@
                         <div class="row col-lg-12 mx-auto">
                             <h1 class="entry-title mx-auto">{{ productData.title }}</h1>
                         </div>
-                        
+
                         <!-- <div class="gallery-item-types">
                             <i class="fa fa-tags"></i>
                             <a href="#">Advanced Technology</a>, <a href="#">Free Facilities</a>
@@ -77,7 +74,7 @@
                                 <h4 style="color: #288a72;">Description</h4>
                                 <hr />
                                 <p>{{ productData.title }}</p>
-                                <p>{{ productData.detail }}</p>
+                                <p [innerHtml]=productData.detail></p>
                             </div>
                         </div>
                     </div>
