--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -182,8 +182,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="features-intro clearfix">
-                    <img src="assets/images/temp-images/service-3-670x500.jpg" alt="WMTA_logo">
+                <div class="features-intro clearfix" style="text-align: center !important;">
+                    <img src="assets/images/New WMTA logo_PNG.webp" alt="service-3">
+                    <br><br>
+                    <img src="assets/images/CMTP-NEW-LOGO_20181127_VF.webp" alt="service-3">
                 </div>
             </div>
 
