--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -8,7 +8,7 @@
                 <article class="common clearfix hentry">
                     <figure class="overlay-effect">
                         <!-- <a href="assets/images/temp-images/gallery-11.jpg" title="Healthcare Resources"></a> -->
-                        <a >
+                        <a>
                             <img src="assets/images/temp-images/gallery-11.jpg" alt="gallery-1" />
                         </a>
                         <a class="overlay" href="assets/images/temp-images/gallery-11.jpg" title="1"></a>
@@ -21,7 +21,7 @@
             <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
                 <article class="common clearfix hentry">
                     <figure class="overlay-effect">
-                        <a >
+                        <a>
                             <img src="assets/images/temp-images/gallery-7.jpg" alt="gallery-1" />
                         </a>
                         <a class="overlay" href="assets/images/temp-images/gallery-7.jpg" title="2"></a>
@@ -34,7 +34,7 @@
             <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
                 <article class="common clearfix hentry">
                     <figure class="overlay-effect">
-                        <a >
+                        <a>
                             <img src="assets/images/temp-images/gallery-11.jpg" alt="gallery-1" />
                         </a>
                         <a class="overlay" href="assets/images/temp-images/gallery-11.jpg" title="3"></a>
@@ -47,7 +47,7 @@
             <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
                 <article class="common clearfix hentry">
                     <figure class="overlay-effect">
-                        <a >
+                        <a>
                             <img src="assets/images/temp-images/gallery-5.jpg" alt="gallery-1" />
                         </a>
                         <a class="overlay" href="assets/images/temp-images/gallery-5.jpg" title="4"></a>
@@ -59,65 +59,7 @@
         </div>
     </div>
 </div>
-<br />
-<div class="container isotope-wrapper text-center">
-    <div class="row">
-        <div id="isotope-container" class="clearfix">
-            <!--column start-->
-            <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
-                <article class="common clearfix hentry">
-                    <figure class="overlay-effect">
-                        <a >
-                            <img src="assets/images/temp-images/gallery-11.jpg" alt="gallery-1" />
-                        </a>
-                        <a class="overlay" href="assets/images/temp-images/gallery-11.jpg" title="5"></a>
-                    </figure>
-                </article>
-            </div>
-            <!--column end-->
 
-            <!--column start-->
-            <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
-                <article class="common clearfix hentry">
-                    <figure class="overlay-effect">
-                        <a >
-                            <img src="assets/images/temp-images/gallery-7.jpg" alt="gallery-1" />
-                        </a>
-                        <a class="overlay" href="assets/images/temp-images/gallery-7.jpg" title="6"></a>
-                    </figure>
-                </article>
-            </div>
-            <!--column end-->
-
-            <!--column start-->
-            <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
-                <article class="common clearfix hentry">
-                    <figure class="overlay-effect">
-                        <a >
-                            <img src="assets/images/temp-images/gallery-11.jpg" alt="gallery-1" />
-                        </a>
-                        <a class="overlay" href="assets/images/temp-images/gallery-11.jpg" title="7"></a>
-                    </figure>
-                </article>
-            </div>
-            <!--column end-->
-
-            <!--column start-->
-            <div class="isotope-item advanced-technology free-facilities col-md-3 col-sm-3 ">
-                <article class="common clearfix hentry">
-                    <figure class="overlay-effect">
-                        <a >
-                            <img src="assets/images/temp-images/gallery-5.jpg" alt="gallery-1" />
-                        </a>
-                        <a class="overlay" href="assets/images/temp-images/gallery-5.jpg" title="8"></a>
-                    </figure>
-                </article>
-            </div>
-            <!--column end-->
-
-        </div>
-    </div>
-</div>
 <br />
 
 
@@ -125,8 +67,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="features-intro clearfix">
-                    <img src="assets/images/temp-images/service-3-670x500.jpg" alt="service-3">
+                <div class="features-intro clearfix" style="text-align: center !important;">
+                    <img src="assets/images/New WMTA logo_PNG.webp" alt="service-3">
+                    <br>
+                    <img src="assets/images/CMTP-NEW-LOGO_20181127_VF.webp" alt="service-3">
                 </div>
             </div>
 
@@ -137,11 +81,8 @@
                             <div class="col-md-12">
                                 <h3><a href="services-dental.html">World Medical Tourism Alliance</a></h3>
                                 <p>
-                                    We are the best “Medical Tourism Facilitator” to deliver excellent of care and
-                                    ensuring the continuity of care for patients (customers) and provide professional
-                                    consultation services and personalized assistance , best value Medical tourism
-                                    packages in matching needs, all at affordable prices and that match with preference
-                                    & life style across Thailand & Asia pacific.</p>
+                                    We are the best “Medical Tourism Facilitator” to deliver excellent of care and ensuring the continuity of care for patients (customers) and provide professional consultation services and personalized assistance , best value Medical tourism packages in
+                                    matching needs, all at affordable prices and that match with preference & life style across Thailand & Asia pacific.</p>
                             </div>
                         </div>
                     </article>
@@ -154,4 +95,3 @@
 
 </div>
 <!-- about-us -->
-
