--- a/src/app/home/news/health-blog/health-blog.component.html
+++ b/src/app/home/news/health-blog/health-blog.component.html
@@ -1,4 +1,3 @@
-
 <div class="blog-page clearfix">
     <div class="container">
         <div class="row">
@@ -8,7 +7,8 @@
                     <div class="row" *ngIf="arrData !=''">
                         <div class="col-lg-2">
                             <div class="left_meta clearfix entry-meta">
-                                <time class="entry-time" >{{ this.helper.monthText(arrData.created_at | date : 'M','en') }}
+                                <time class="entry-time">{{ this.helper.monthText(arrData.created_at | date : 'M','en')
+                                    }}
                                     <strong>{{ arrData.created_at | date : 'dd' }}</strong></time>
                             </div>
                         </div>
@@ -19,21 +19,21 @@
                                     <header class="entry-header">
 
                                         <figure>
-                                            <a class="swipebox" href="javascript:(0)"
-                                                title="{{ arrData.title }}">
-                                                <img src="{{ arrData.image }}"
-                                                    class="attachment-blog-page wp-post-image" alt="news-{{ arrData.id }}" />
+                                            <a class="swipebox" href="javascript:(0)" title="{{ arrData.title }}">
+                                                <img src="{{ arrData.image }}" class="attachment-blog-page wp-post-image" alt="news-{{ arrData.id }}" />
                                             </a>
                                         </figure>
-                                        
+
                                         <h1 class="entry-title">{{ arrData.title }}</h1>
                                         <span class="entry-author">
-                                            Date posted : <span class="entry-author-link">{{ arrData.created_at | date : 'yyyy-MM-dd'}}</span>
+                                            Date posted : <span class="entry-author-link">{{ arrData.created_at | date :
+                                                'yyyy-MM-dd'}}</span>
                                         </span>
                                     </header>
 
                                     <div class="entry-content">
-                                        <p>{{ arrData.detail }}</p>
+                                        <p [innerHtml]=arrData.detail></p>
+
                                     </div>
 
                                     <!-- <footer class="entry-footer">
@@ -55,7 +55,7 @@
                                 </div>
                             </article>
 
-                            
+
                             <div class="cardOriginal">
                                 <div class="card">
                                     <div class="card-body">
@@ -100,5 +100,3 @@
         </div>
     </div>
 </div>
-
-
